# FastMirrorSync

./: .gitignore  Cargo.toml  README.md  requirements.txt  sync.py
.github/workflow/: action.yml
.github/workflows/: action.yml
client/: arclight.py  bungeecord.py  lightfall.py  lightfallclient.py  nukkitx.py  papermc.py  paperspigot.py  pocketmine.py  purpur.py  sponge.py  spongeforge.py  spongevanilla.py  velocity.py  waterfall.py
collectors/: Cargo.toml
collectors/src/api/: github.rs  jenkins.rs  mod.rs  papermc.rs  sponge.rs
docker/: .dockerignore  JDK16.dockerfile  JDK17.dockerfile  JDK8.dockerfile  build.sh  info.py  sync.py
docker/spigot_jdk16/: Dockerfile  info.py
docker/spigot_jdk17/: Dockerfile  info.py
docker/spigot_jdk8/: Dockerfile  info.py
lib/: __init__.py  client.py  config.py  github.py  http.py  jenkins.py  log.py  module.py  persistence.py  plugin.py  plugin_info.py  utils.py  version.py
libcollector/: Cargo.toml
libcollector/src/: checker.rs  datetime.rs  fastmirror.rs  http.rs  lib.rs  manifest.rs  utils.rs
plugin/: Arclight.py  BungeeCord.py  CatServer1_12_2.py  CatServer1_16_5.py  Lightfall.py  LightfallClient.py  LoliServer.py  Mohist.py  NukkitX.py  Paper.py  PaperMC.py  PocketMine.py  Pufferfish.py  Purpur.py  Spigot.py  Sponge.py  SpongeForge.py  SpongeVanilla.py  Velocity.py  Waterfall.py  __init__.py
script/: deploy.sh  develop.bat  develop.sh  sync.sh
