[package]
name = "collectors"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dependencies]
libcollector = { path = "../libcollector" }
anyhow = "1.0.69"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
roxmltree = "0.18.0"
