[package]
name = "libcollector"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies", "gzip", "deflate", "blocking"] }
# tokio = { version = "1", features = ["full"] }
anyhow = { version = "1.0.69", features = ["backtrace"]}
reqwest-retry = "0.2.1"
reqwest-middleware = "0.2.0"
time = { version = "0.3", features = ["macros", "parsing"] }
sha1_smol = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.4.0"
hex = "0.4.3"
map-macro = "0.2.5"
lazy_static = "1.4.0"
backtrace = "0.3.67"
